Autoload dds files with separateAlphaChannel ON and loadDDSMipMaps FALSE. Autosave dds files with format optimized for Skyrim (BC7, color+alpha, mipmap autogen).

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ Plugins/
 *.aps
 *.zip
 *.tmp
+/.vs/IntelTextureWorks/v16
+/3rdParty/photoshop/pluginsdk/samplecode
+/3rdParty/photoshop/images
+/3rdParty/photoshop/connectionsdk
